modificações feitas na versão que estava no pc antigo

--- a/classes/index-untitled-ontology-20.html
+++ b/classes/index-untitled-ontology-20.html
@@ -21,16 +21,57 @@
 
 
 <div class='owlselector'>
-<h2>untitled-ontology-20: classes (6)</h2>
+<h2>untitled-ontology-20: classes (47)</h2>
 
-<div class='codebox' id='ID-8803663869667322403'>
+<div class='codebox' id='ID-5724891624823472873'>
 <ul>
 <li class="asserted"><a href="Thing___-200689702.html" class='Class' title="http://www.w3.org/2002/07/owl#Thing">owl:Thing</a></li>
-<li class="asserted"><a href="Caracteristicas___2008507305.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Caracteristicas">Caracteristicas</a></li>
+<li class="asserted"><a href="Acidente_por_animais_peconhentos___-618726535.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Acidente_por_animais_peconhentos">Acidente_por_animais_peconhentos</a></li>
+<li class="asserted"><a href="Agravo___774290348.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Agravo">Agravo</a></li>
+<li class="asserted"><a href="Botulismo___-1010874104.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Botulismo">Botulismo</a></li>
+<li class="asserted"><a href="CNES___-1183147113.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES">CNES</a></li>
 <li class="asserted"><a href="CNES_mes_registro___604650363.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_mes_registro">CNES_mes_registro</a></li>
+<li class="asserted"><a href="Colera___838761778.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Colera">Colera</a></li>
+<li class="asserted"><a href="Consultas_de_enfermagem_basicas___575212813.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Consultas_de_enfermagem_basicas">Consultas_de_enfermagem_basicas</a></li>
+<li class="asserted"><a href="Consultas_medicas_basicas___-404642250.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Consultas_medicas_basicas">Consultas_medicas_basicas</a></li>
+<li class="asserted"><a href="Coqueluche___-1403016672.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Coqueluche">Coqueluche</a></li>
+<li class="asserted"><a href="Dengue_ate_2013___-1038150112.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dengue_ate_2013">Dengue_ate_2013</a></li>
+<li class="asserted"><a href="Dengue_de_2014_em_diante___-612372253.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dengue_de_2014_em_diante">Dengue_de_2014_em_diante</a></li>
+<li class="asserted"><a href="Difteria___-1204172170.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Difteria">Difteria</a></li>
+<li class="asserted"><a href="Doenca_de_chagas_aguda___626755513.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Doenca_de_chagas_aguda">Doenca_de_chagas_aguda</a></li>
+<li class="asserted"><a href="Doencas_exantematicas___1762390715.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Doencas_exantematicas">Doencas_exantematicas</a></li>
+<li class="asserted"><a href="Esquistossomose___-896540726.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Esquistossomose">Esquistossomose</a></li>
+<li class="asserted"><a href="Febre_amarela___-1730268942.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Febre_amarela">Febre_amarela</a></li>
+<li class="asserted"><a href="Febre_maculosa___832126878.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Febre_maculosa">Febre_maculosa</a></li>
+<li class="asserted"><a href="Febre_tifoide___2137414337.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Febre_tifoide">Febre_tifoide</a></li>
+<li class="asserted"><a href="Hantavirose___-880372254.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Hantavirose">Hantavirose</a></li>
+<li class="asserted"><a href="Hepatite___-1808729678.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Hepatite">Hepatite</a></li>
+<li class="asserted"><a href="Influenza_pandemica___789940913.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Influenza_pandemica">Influenza_pandemica</a></li>
+<li class="asserted"><a href="Intoxicac%C3%A3o_exogena___-732419380.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Intoxicacão_exogena">Intoxicacão_exogena</a></li>
+<li class="asserted"><a href="Leishmaniose_tegumentar_americana___-1290283264.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Leishmaniose_tegumentar_americana">Leishmaniose_tegumentar_americana</a></li>
+<li class="asserted"><a href="Leishmaniose_visceral___1015950123.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Leishmaniose_visceral">Leishmaniose_visceral</a></li>
+<li class="asserted"><a href="Leptospirose___1654742855.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Leptospirose">Leptospirose</a></li>
+<li class="asserted"><a href="Malaria___1312856959.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Malaria">Malaria</a></li>
+<li class="asserted"><a href="Meningite___-1038097428.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Meningite">Meningite</a></li>
+<li class="asserted"><a href="mes___-1185112295.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#mes">mes</a></li>
+<li class="asserted"><a href="Outros_procedimentos_de_enfermagem_nivel_medio_PACS___349186425.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Outros_procedimentos_de_enfermagem_nivel_medio_PACS">Outros_procedimentos_de_enfermagem_nivel_medio_PACS</a></li>
+<li class="asserted"><a href="Outros_procedimentos_medicos___1880004232.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Outros_procedimentos_medicos">Outros_procedimentos_medicos</a></li>
 <li class="asserted"><a href="Nothing___-782458183.html" class='Class' title="http://www.w3.org/2002/07/owl#Nothing">owl:Nothing</a></li>
+<li class="asserted"><a href="Paralisia_flacida_aguda___-2057493128.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Paralisia_flacida_aguda">Paralisia_flacida_aguda</a></li>
+<li class="asserted"><a href="Peste___-1108215507.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Peste">Peste</a></li>
+<li class="asserted"><a href="Producao_medica___-309337851.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Producao_medica">Producao_medica</a></li>
+<li class="asserted"><a href="Raiva___-1106497181.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Raiva">Raiva</a></li>
+<li class="asserted"><a href="SUS___885539155.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SIA/SUS">SIA/SUS</a></li>
+<li class="asserted"><a href="SIA_mes_registro___-180096407.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SIA_mes_registro">SIA_mes_registro</a></li>
+<li class="asserted"><a href="Sifilis_congenita___-111954684.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Sifilis_congenita">Sifilis_congenita</a></li>
+<li class="asserted"><a href="Sifilis_em_gestante___2019735440.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Sifilis_em_gestante">Sifilis_em_gestante</a></li>
+<li class="asserted"><a href="SINAN___-1106316253.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SINAN">SINAN</a></li>
+<li class="asserted"><a href="SINAN_mes_registro___-225499537.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SINAN_mes_registro">SINAN_mes_registro</a></li>
+<li class="asserted"><a href="Sindrome_da_rubeola_congenita___611995937.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Sindrome_da_rubeola_congenita">Sindrome_da_rubeola_congenita</a></li>
+<li class="asserted"><a href="Tetano_acidental___713386935.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Tetano_acidental">Tetano_acidental</a></li>
+<li class="asserted"><a href="Tetano_neonatal___-2142793486.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Tetano_neonatal">Tetano_neonatal</a></li>
 <li class="asserted"><a href="Tipo_gestao___101743798.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Tipo_gestao">Tipo_gestao</a></li>
-<li class="asserted"><a href="Tipo_leitos___244592081.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Tipo_leitos">Tipo_leitos</a></li>
+<li class="asserted"><a href="Violencia_domestica_sexual_e_ou_outras_violencias___324394565.html" class='Class' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Violencia_domestica_sexual_e_ou_outras_violencias">Violencia_domestica_sexual_e_ou_outras_violencias</a></li>
 </ul>
 </div>
 
