--- a/individuals/index.html
+++ b/individuals/index.html
@@ -1,23 +1,25 @@
 <div class='owlselector'>
-<h2>All Individuals (15)</h2>
+<h2>All Individuals (17)</h2>
 
-<div class='codebox' id='ID-6554644722704741432'>
+<div class='codebox' id='ID-9011703746448061506'>
 <ul>
-<li class="asserted"><a href="Abr17___-1122160779.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Abr17">Abr17</a></li>
-<li class="asserted"><a href="Abr18___-1122160778.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Abr18">Abr18</a></li>
-<li class="asserted"><a href="Abr18_Estadual___1371632156.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Abr18_Estadual">Abr18_Estadual</a></li>
-<li class="asserted"><a href="Abr18_Mista___755274587.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Abr18_Mista">Abr18_Mista</a></li>
-<li class="asserted"><a href="Abr18_Municipal___1876392649.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Abr18_Municipal">Abr18_Municipal</a></li>
-<li class="asserted"><a href="Ago16___-1122014708.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Ago16">Ago16</a></li>
-<li class="asserted"><a href="Ago17___-1122014707.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Ago17">Ago17</a></li>
-<li class="asserted"><a href="Ago17_Estadual___-286117531.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Ago17_Estadual">Ago17_Estadual</a></li>
-<li class="asserted"><a href="Ago17_Mista___12599474.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Ago17_Mista">Ago17_Mista</a></li>
-<li class="asserted"><a href="Ago17_Municipal___2025759904.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Ago17_Municipal">Ago17_Municipal</a></li>
-<li class="asserted"><a href="Dez16___-1119293156.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dez16">Dez16</a></li>
-<li class="asserted"><a href="Dez17___-1119293155.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dez17">Dez17</a></li>
-<li class="asserted"><a href="Dez17_Estadual___203922517.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dez17_Estadual">Dez17_Estadual</a></li>
-<li class="asserted"><a href="Dez17_Mista___902577090.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dez17_Mista">Dez17_Mista</a></li>
-<li class="asserted"><a href="Dez17_Municipal___37132208.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Dez17_Municipal">Dez17_Municipal</a></li>
+<li class="asserted"><a href="CNES_Abr17___-1583198705.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abr17">CNES_Abr17</a></li>
+<li class="asserted"><a href="CNES_Abr18___-1583198704.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abr18">CNES_Abr18</a></li>
+<li class="asserted"><a href="CNES_Abr18_Estadual___1112285378.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abr18_Estadual">CNES_Abr18_Estadual</a></li>
+<li class="asserted"><a href="CNES_Abr18_Mista___-1489316235.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abr18_Mista">CNES_Abr18_Mista</a></li>
+<li class="asserted"><a href="CNES_Abr18_Municipal___-1868390173.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abr18_Municipal">CNES_Abr18_Municipal</a></li>
+<li class="asserted"><a href="CNES_Abril2019___871052018.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Abril2019">CNES_Abril2019</a></li>
+<li class="asserted"><a href="CNES_Ago16___-1583052634.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Ago16">CNES_Ago16</a></li>
+<li class="asserted"><a href="CNES_Ago17___-1583052633.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Ago17">CNES_Ago17</a></li>
+<li class="asserted"><a href="CNES_Ago17_Estadual___-545464309.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Ago17_Estadual">CNES_Ago17_Estadual</a></li>
+<li class="asserted"><a href="CNES_Ago17_Mista___2062975948.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Ago17_Mista">CNES_Ago17_Mista</a></li>
+<li class="asserted"><a href="CNES_Ago17_Municipal___-1719022918.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Ago17_Municipal">CNES_Ago17_Municipal</a></li>
+<li class="asserted"><a href="CNES_Dez16___-1580331082.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Dez16">CNES_Dez16</a></li>
+<li class="asserted"><a href="CNES_Dez17___-1580331081.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Dez17">CNES_Dez17</a></li>
+<li class="asserted"><a href="CNES_Dez17_Estadual___-55424261.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Dez17_Estadual">CNES_Dez17_Estadual</a></li>
+<li class="asserted"><a href="CNES_Dez17_Mista___-1342013732.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Dez17_Mista">CNES_Dez17_Mista</a></li>
+<li class="asserted"><a href="CNES_Dez17_Municipal___587316682.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#CNES_Dez17_Municipal">CNES_Dez17_Municipal</a></li>
+<li class="asserted"><a href="SIA_Abr17___2132043489.html" class='Individual' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SIA_Abr17">SIA_Abr17</a></li>
 </ul>
 </div>
 
