--- a/objectproperties/index.html
+++ b/objectproperties/index.html
@@ -1,9 +1,10 @@
 <div class='owlselector'>
-<h2>All Objectproperties (1)</h2>
+<h2>All Objectproperties (2)</h2>
 
-<div class='codebox' id='ID-8536081855375298940'>
+<div class='codebox' id='ID2055274693515057600'>
 <ul>
-<li class="asserted"><a href="pertence_ao_mes___772255781.html" class='Object Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#pertence_ao_mes">pertence_ao_mes</a></li>
+<li class="asserted"><a href="topObjectProperty___-102535691.html" class='Object Property' title="http://www.w3.org/2002/07/owl#topObjectProperty">owl:topObjectProperty</a></li>
+<li class="asserted"><a href="possui_registros___1018515986.html" class='Object Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#possui_registros">possui_registros</a></li>
 </ul>
 </div>
 
