--- a/dataproperties/index-untitled-ontology-20.html
+++ b/dataproperties/index-untitled-ontology-20.html
@@ -21,9 +21,9 @@
 
 
 <div class='owlselector'>
-<h2>untitled-ontology-20: dataproperties (24)</h2>
+<h2>untitled-ontology-20: dataproperties (27)</h2>
 
-<div class='codebox' id='ID8959321634529355539'>
+<div class='codebox' id='ID667306291220305409'>
 <ul>
 <li class="asserted"><a href="Caracteristicas_tipo_gestao___-2090576638.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Caracteristicas_tipo_gestao">Caracteristicas_tipo_gestao</a></li>
 <li class="asserted"><a href="central_regulacao_medica_urgencias___-456999757.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#central_regulacao_medica_urgencias">central_regulacao_medica_urgencias</a></li>
@@ -34,13 +34,16 @@
 <li class="asserted"><a href="Centro_regulacao_servicos___1912542864.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Centro_regulacao_servicos">Centro_regulacao_servicos</a></li>
 <li class="asserted"><a href="Clinica_especializada___-1935521423.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Clinica_especializada">Clinica_especializada</a></li>
 <li class="asserted"><a href="Consultorio_isolado___1562580441.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Consultorio_isolado">Consultorio_isolado</a></li>
+<li class="asserted"><a href="descricao___314646407.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#descricao">descricao</a></li>
 <li class="asserted"><a href="Hospital_especializado___995849664.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Hospital_especializado">Hospital_especializado</a></li>
 <li class="asserted"><a href="Hospital_geral___-101504616.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Hospital_geral">Hospital_geral</a></li>
 <li class="asserted"><a href="LACEN___-1113029675.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#LACEN">LACEN</a></li>
 <li class="asserted"><a href="Leitos_gerais___-1623803540.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Leitos_gerais">Leitos_gerais</a></li>
 <li class="asserted"><a href="NUTES___-1110570471.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#NUTES">NUTES</a></li>
 <li class="asserted"><a href="Oficina_ortopedica___-818323128.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Oficina_ortopedica">Oficina_ortopedica</a></li>
+<li class="asserted"><a href="topDataProperty___215468192.html" class='Data Property' title="http://www.w3.org/2002/07/owl#topDataProperty">owl:topDataProperty</a></li>
 <li class="asserted"><a href="Policlinica___-2009815461.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Policlinica">Policlinica</a></li>
+<li class="asserted"><a href="quantidade___875877250.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#quantidade">quantidade</a></li>
 <li class="asserted"><a href="SADT_isolado___-1719306206.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SADT_isolado">SADT_isolado</a></li>
 <li class="asserted"><a href="SAMU___-1182682700.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#SAMU">SAMU</a></li>
 <li class="asserted"><a href="Servico_atencao_domiciliar___-137623261.html" class='Data Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#Servico_atencao_domiciliar">Servico_atencao_domiciliar</a></li>
