--- a/datatypes/index-untitled-ontology-20.html
+++ b/datatypes/index-untitled-ontology-20.html
@@ -21,12 +21,14 @@
 
 
 <div class='owlselector'>
-<h2>untitled-ontology-20: datatypes (2)</h2>
+<h2>untitled-ontology-20: datatypes (4)</h2>
 
-<div class='codebox' id='ID6037574527251337203'>
+<div class='codebox' id='ID-727693459911740305'>
 <ul>
 <li class="asserted"><a href="PlainLiteral___-1770072891.html" class='Datatype' title="http://www.w3.org/1999/02/22-rdf-syntax-ns#PlainLiteral">rdf:PlainLiteral</a></li>
+<li class="asserted"><a href="int___1692045366.html" class='Datatype' title="http://www.w3.org/2001/XMLSchema#int">xsd:int</a></li>
 <li class="asserted"><a href="integer___-644974203.html" class='Datatype' title="http://www.w3.org/2001/XMLSchema#integer">xsd:integer</a></li>
+<li class="asserted"><a href="string___799955032.html" class='Datatype' title="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></li>
 </ul>
 </div>
 
