--- a/objectproperties/index-untitled-ontology-20.html
+++ b/objectproperties/index-untitled-ontology-20.html
@@ -21,11 +21,13 @@
 
 
 <div class='owlselector'>
-<h2>untitled-ontology-20: objectproperties (1)</h2>
+<h2>untitled-ontology-20: objectproperties (3)</h2>
 
-<div class='codebox' id='ID8063781305046936562'>
+<div class='codebox' id='ID634954346035166692'>
 <ul>
+<li class="asserted"><a href="topObjectProperty___-102535691.html" class='Object Property' title="http://www.w3.org/2002/07/owl#topObjectProperty">owl:topObjectProperty</a></li>
 <li class="asserted"><a href="pertence_ao_mes___772255781.html" class='Object Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#pertence_ao_mes">pertence_ao_mes</a></li>
+<li class="asserted"><a href="possui_registros___1018515986.html" class='Object Property' title="http://www.semanticweb.org/wagne/ontologies/2019/4/untitled-ontology-20#possui_registros">possui_registros</a></li>
 </ul>
 </div>
 
